test/Fail/Issue6492.err
/data/work/functional-programming/agda/test/Fail/Issue6492.agda:17.11-12: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  /data/work/functional-programming/agda/test/Fail/Issue6492.agda:17.11-12
